--- a/src/app/(routes)/dashboard/_components/latestExpense/latestExpense.module.css
+++ b/src/app/(routes)/dashboard/_components/latestExpense/latestExpense.module.css
@@ -3,7 +3,6 @@
   overflow-x: auto; /* For horizontal scrolling on smaller screens */
   max-width: 100%; /* Ensure the table doesn't overflow its container */
   border-radius: 5px;
-  background-color: #fff;
   margin: 30px 0;
 }
 
@@ -15,33 +14,31 @@
 
 /* Table Header */
 .expenseTable table thead {
-  background-color: #f1f5f9; /* Blue header */
-  color: #000;
+  background-color: var(--content-bgColor); /* Blue header */
 }
 
 .expenseTable table thead th {
   padding: 12px;
   font-size: 16px;
   text-align: left;
-  border: 1px solid #e0e0e0;
+  border: 1px solid var(--table-borderColor);
   text-align: center;
 }
 
 /* Table Rows */
 .expenseTable table tbody tr {
-  border: 1px solid #e0e0e0;
+  border: 1px solid var(--table-borderColor);
   transition: background-color 0.3s ease;
 }
 
 .expenseTable table tbody tr:hover {
-  background-color: #f7f7f7; /* Light gray on hover */
+  background-color: var(--content-bgColor); /* Light gray on hover */
 }
 
 /* Table Cells */
 .expenseTable table td {
   padding: 12px;
   font-size: 14px;
-  color: #555;
-  border: 1px solid #e0e0e0;
+  border: 1px solid var(--table-borderColor);
   text-align: center;
 }
