--- a/src/app/(routes)/dashboard/_components/modal/addBudgetModal.module.css
+++ b/src/app/(routes)/dashboard/_components/modal/addBudgetModal.module.css
@@ -12,7 +12,7 @@
 }
 
 .modalContent {
-  background: #fff;
+  background: var(--content-bgColor);
   padding: 30px;
   border-radius: 10px;
   width: 400px;
@@ -48,7 +48,7 @@
   right: 20px;
   font-size: 24px;
   font-weight: bold;
-  color: #333;
+  color: var(--text-color);
   cursor: pointer;
 }
 
