--- a/src/app/(routes)/dashboard/dashboard.module.css
+++ b/src/app/(routes)/dashboard/dashboard.module.css
@@ -9,7 +9,7 @@
   flex: 1;
   padding: 30px;
   border-radius: 5px;
-  background-color: #f1f5f9;
+  background-color: var(--content-bgColor);
 }
 
 .totalBudget,
